--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@react-three/fiber": "^9.4.2",
     "@types/three": "^0.181.0",
     "framer-motion": "^12.23.24",
-    "next": "16.0.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "three": "^0.181.2"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.23",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
+    "eslint-config-next": "^16.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
